AgriStore/force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <label>Feedback</label>
    <pluralLabel>Feedback</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Feedback Number</label>
        <displayFormat>FB-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Customer feedback for AgriStore equipment rental experiences</description>
</CustomObject>