AgriStore/force-app/main/default/objects/Feedback__c/validationRules/AgriStore_Feedback_Rating_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>AgriStore_Feedback_Rating_Range</fullName>
    <active>true</active>
    <description>Ensures feedback rating is between 1 and 5</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Rating__c)),
    OR(Rating__c &lt; 1, Rating__c &gt; 5)
)</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Rating must be between 1 and 5.</errorMessage>
</ValidationRule>